overflow bug fix

--- a/frontend/src/Components/Hero.module.scss
+++ b/frontend/src/Components/Hero.module.scss
@@ -1,7 +1,6 @@
 @import "../colors.scss";
 
 .hero_section {
-  width: 100vw;
   height: 100vh;
   min-height: 700px;
 
@@ -9,7 +8,7 @@
 
   font-size: 11.25rem;
 
-  background-image: url("../assets/header_main_big_blue.png");
+  background-image: url("../assets/header_main_big_blue1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
