--- a/frontend/src/Components/PhotoSection.module.scss
+++ b/frontend/src/Components/PhotoSection.module.scss
@@ -11,7 +11,6 @@
 
 .photo_section {
   position: relative;
-  overflow: hidden;
 }
 
 .photos_container {
